Fix port status page dark mode issues
Fixed port status page dark mode display issues, plus added table hover effects.

--- a/themes/shijin4/static/css/shijin4.css
+++ b/themes/shijin4/static/css/shijin4.css
@@ -767,4 +767,11 @@ footer a, footer span.glyphicon {
 		background-color:#444;
 		color:white;
 	}
+	.port {
+		color:black;
+	}
+	.platform:hover {
+		background-color:#444;
+		color:white;
+	}
 }
